StringTable: Calculates wrong number of uncleaned items.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b19

        Uncleaned calculation correction. Since a dead string can be visited twice, it is thus counted twice, making the counter skew.
        ZGC concurrent cleaning. ZGC uses the ParState directly, it needs a way to set the dead strings and trigger a cleaning.
        Minor, compile issues with slowdebug win32.

              Assignee:
              Robbin Ehn
              Reporter:
              Robbin Ehn
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: