8204613: StringTable: Calculates wrong number of uncleaned items

Reviewed-by: pliden, coleenp